--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
 .fixed-nav-bar {
   background-color: #222;
   min-height: 50px;
@@ -7,10 +11,10 @@
   width: 100%;
   padding-top: 10px;
   z-index: 1;
-  a {
+  margin-bottom: 0px;
+  div a {
     color: #aaa;}
     font-size: 18px;
-    margin-left: -15px;
   & a:hover {
       color: white;
       text-decoration: none;}
@@ -21,17 +25,12 @@
 }
 
 main {
-  margin-top: 50px;
+  margin-top: -20px;
   header{
   background-color: #EEEEEE;
   padding: 48px 0px;
   font-size: 21px;
   h1 {
     font-size: 63px;
-  }}
-}
-
-.primary-btn {
-  background-color: #286090;
-  margin-left: 15px;
-}
+  }
+}}
